testdata/baselines/reference/submodule/conformance/lateBoundAssignmentDeclarationSupport2.errors.txt
usage.js(1,11): error TS2580: Cannot find name 'require'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.


==== usage.js (1 errors) ====
    const x = require("./lateBoundAssignmentDeclarationSupport2.js");
              ~~~~~~~
!!! error TS2580: Cannot find name 'require'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
    const y = x["my-fake-sym"];
    const z = x[x.S];
    
==== lateBoundAssignmentDeclarationSupport2.js (0 errors) ====
    // currently unsupported
    const _sym = Symbol();
    const _str = "my-fake-sym";
    
    module.exports[_sym] = "ok";
    module.exports[_str] = "ok";
    module.exports.S = _sym;